disable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:eIqXw1H7d9S1IxXPhlTVUmuHklgHGlv+mPNC+PBcSrw3e53HC47cdC57W+/mkGS4M6uZ8qhRnBIcn64BjP4lOe0=,iv:YSPMBwIw89BeDBpgYocf0KgSgDpBKkHLxDbroUouiso=,tag:2qLZKn+oYIlSPgZQusdmCQ==,type:comment]
-#ENC[AES256_GCM,data:Rlvc+DNowX/79FkEsd/URKzfhtf+FVoB62N33Ij4YILaHly+AA6tb4BhCC0=,iv:JPjEHv1gcrms36D+rkkOGIBIHeEf7zi7l4KeL9qvh+k=,tag:zBGslUPUzKwfT3eqmJfXxA==,type:comment]
-VIP: ENC[AES256_GCM,data:zeLYv54XqYYuWPwyZg==,iv:Un9DQl3suXLBqNOp+3epDYME/48GZM6BbHlzRaRF/DQ=,tag:+1lCspit9Fisjnx77t29HQ==,type:str]
-#ENC[AES256_GCM,data:oqqD/JF9uBCPrn8lhQZ22XEgFfZvfOYpvHi/,iv:fDxnqpqR5q3YQbqqqKQQPz+qI4zgVS/wZVy2/+7TENg=,tag:nALQH7JZNxV4IkNpwdYYJA==,type:comment]
-#ENC[AES256_GCM,data:mOZu0MVl5Q6PhoPhND0Q7LsocnkbgGmAbaFwSatfODbQ0CZ5+c5nOrGv35ja02xG8wlQLb6a31VbjAguFEufG9llPRpOEEZjiqKaY1japTGOXO1ungg4Xs0=,iv:0vo8Ve36hafygAxqJTjHpJccLou3t9CHJ+80H2D7Np0=,tag:OyF/zaH5M8a5q1YWkFamNQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:jnbiCPf6eGNSvSVX0CI=,iv:RWIAwFKgfuVwC0fWvWid76cZErekDy3XSPiuOVM6B50=,tag:qWcPxlry2itEdfovmi/Oqg==,type:str]
-#ENC[AES256_GCM,data:/gT3dKwMjXktC100937RJX427b887/E6xmxRzLCfjajraA==,iv:XQ3H+rPXBxZn3v4nQn+NiCiqPD+UOfg+VkOCy5nYqZ0=,tag:6GPk8ATdTS3dpw0q+M7KjQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:1ctX4lBz5UEVDEk/Og==,iv:leD3NeXKCQE05sRFPv3l1Eib6nnS42kjaZmkIngX5yQ=,tag:YWAfcstOhpXV9EHESjVgQw==,type:str]
-#ENC[AES256_GCM,data:ELenXj0/LgErqrbIQJ7Kf3bXrijXISkJNKzCiWaxjcq6j+7j/h7FgCqBwyVBRm8=,iv:/e7BRH+MyxAVlSKNWjZtRoeMgRQ+zdL+aUjT24eoJII=,tag:h3PqZ9KEwLm/LIy8WuDnQQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:jAw+OlZLrNSrdIku88/r5Asa1JghAoWsEtpg7O80eg==,iv:GPQ8SGWWDD8tA7Gj6F2LfuBReYxvqunTUUCwMQ/87j4=,tag:loBs76Snc61cvBewLFPZmg==,type:str]
-#ENC[AES256_GCM,data:svuX6rOa3m3vGfsa+xNc2WELuKSiDpc5/59/URyx8v2V7Gnx1yzIOCV6Qxi919P84qwaW6BYTpTqXytCgLnKvV7QOoZ2C/1Njaj6JfDLfReLHQ==,iv:nycRpcT4t1cJK9lktZ/r7Egtv/iDJIjZ3lgjUG6hh4c=,tag:NqC+b38ruZLwZQuomSg/qQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:AkmRUnr4qltM786Rdx23,iv:4jLecM5wEGAoOluFekQN3XTU8p11ODOoBI88n2Rezjs=,tag:sdkIP3E8Q8m6kRpmTCK5sA==,type:str]
-#ENC[AES256_GCM,data:GEyFA8i8U/05Yee7282GaMLZS4Qs3z1yakGXWoREAhnc,iv:b6cVYq3usaK3azKtUZtROFbdQsAbuOrh+/Pve11Nx1c=,tag:Pt2wOfJMei4fnSns9tomQg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:kU64y1gLDlfJeiG/7rpy,iv:zc4cpR3XfX4wUbf8y5rdBwcdvWyQFywpEtAuNstZwLA=,tag:1hSarwyhtekmv+SE+4pbqg==,type:str]
-#ENC[AES256_GCM,data:wa/w9kJgDfUC/uEVHJiP/u7PlcU7D6qmXlOOe6SKaAA0eHVcwxlybWUVTmI1d7T07lJ0u/W2t95+pm61RYxX8RGmWHBNMxtgpf6UWq+2FH8=,iv:nJK3QnZ/ElWJVvY5ey7J9hYZsFgYdA2bmEH7lOqZR+U=,tag:cQL6o1ANiK4OlYe98xXiyg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:KDmJ0nzhx6sPNkmXNiU7,iv:8k4Il/aMIqTk/tA2N1x23+5rME1dJWgKjdLCcA2M2UM=,tag:o4nn3CDk0fXLCFwa7vKAtA==,type:str]
-#ENC[AES256_GCM,data:p0MImwza5g81bjnpWGSl8M995Cj0tYTE/Wqlo3Ff3hHAmogR9rk7GMLKpM6h1XfPyWFfdxYhByKVf6rqOb12dLgU4Cm+utAZt51krennl5xWAfwaI786,iv:yxI/iyiuuK/XEJvHecHuuxMKegJhPbGT5juT0zza+nY=,tag:jI295RXxepyZqc6rlodr0A==,type:comment]
-#ENC[AES256_GCM,data:BQYKqyCsax+qsrQkJXNGu6gXS3+OapKuU2AbSPD1srEQOL7GOyNPleAyybi6FETw6pWzX3UfNRCLVRxo52ZcPyW8hf36ejHTpW4r6ZEkOtUSzpvb+Y+B+Zy4QX6RlEK3n9Ao4iD0Vjd9LcEx2veT5kig54fn/gBd2Fsl/w==,iv:MhhIczDjEqC1kOsRqgXz0t0zi10zZbJ/JCicBl9Rof8=,tag:uVGkoJg8lDFTuJvvHF5pxQ==,type:comment]
-#ENC[AES256_GCM,data:clEF26tORzMpH7N2Syz/pDFnMasFMg3E288VP5H8f2tZrSjFmX/nlM1EkGdI8kO3r9QqGNGAw3EYC7kqG0K8OgdPk9GMmTHl25iOrCZglXg=,iv:DUqkjSbTOXtTkUUYC4m4C5cOVkxO+jUZdroc7f6ZRTE=,tag:fDzTKVzEz3d/QuYCth+2fw==,type:comment]
-#ENC[AES256_GCM,data:0oe71XHPFyHnIAjhJJlgYv+QfH8yGCvdauHyiX1MTVzPNDdzNMUcWZMMk8skqoEbpi63iFHO,iv:bQ5mvIvK90fap2wYvt+7hufhho6urADXWODb1tEiGgs=,tag:yNF1/LO2in4QS0ZMLjXrXg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:L1Cfy76K/dTYuL/r,iv:eHKL5qPhCAW6rUYOjendFzcMlWwPSWZvskCrCIhrHcY=,tag:ceReVRt9lAfs3PQQ8D9UGA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ghWold4EzBpn5Z1yobKSYhg=,iv:zzKg36YDrAOFW1VxSb7xUG0uL1coqMDOuqiWDmBFC4o=,tag:ZLzQm1nHTUPkWzHYSzib9Q==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:/wmB7bFJ98HhpJ+8cVbpW7E7wNInP2CFGCDCLbd9/0c=,iv:pkKR+qDLxdVrEU0VL7ZCKNrm1S12A3hHIIm3SQY81I8=,tag:5hX/Y/YraqPmvjsUy0HJJA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:5AzS4aB3r0xtdKGWOMbiMYuMk62bh88jN/ajd+Nn6uPZLtWD/RXWeg==,iv:lmkpIodm5e0jIJwcKkJ1vxqPqQ1YWbGWglfZNWeZJgc=,tag:ECZGmUNDHmaNRvEPk0cQqg==,type:str]
-#ENC[AES256_GCM,data:L80LmMxCscdVHPyI/4uXR3xc9gSj083boLEgr7FyBkRKTSjJR6b2gSUmHG5tQBfXkxYaQVmo2aSNX/Vpd7+Jmw==,iv:u9uhA71amP4x7FVVQC64cKSIfCBruhPdPYS+V11Tl8A=,tag:HuKAQSijGgre4bFpSzQwxA==,type:comment]
-#ENC[AES256_GCM,data:v7NExQxM+ERjSLk9HVW1zeoTvDfGedNC7n8KN+weZpl59orQPlrFwo8eyAQZBCqGI9vzBlFGOhE=,iv:T8HnMWAlKjRpuf5BNbYi3cszmyYjCT8tNci3ErBzkDI=,tag:PfOnRaJRH6x0c4/8duE2+A==,type:comment]
-#ENC[AES256_GCM,data:tavRzO/d3cErYdzOmlocMRFXBlvr8cex6w==,iv:kZcQk2lKmQ15xPNYTsHRTVuDBnuf3G/uELHDZkhC77E=,tag:GwsaHFS2UBGY+QJXopzh0Q==,type:comment]
-#ENC[AES256_GCM,data:zKVET3rIcUIgH3cYxAJ8eQ9UEmJ2HjuN9+1Wm2u7c/DaBKM2AjF9I7oskHkBKZfGjOcoGtXwwagh5/i26Rr7TCstIEvn9HkUACYDB68=,iv:x+I8LUeFb5+yD6d87T5Ttn5+7Kz7/tZSgg6LcxbtX64=,tag:AkAt2yVtNDWGlVjLIvui6Q==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:HTmtHHgqs8HIMWP4LiPC0OG2oPHp4L7s4QJMv2BCRgVPpS3Ybp/JQzDVJaVjl/m9,iv:aT90FTFKjkhBFOOu8ynGgDrjIefd+79opropqSkLb9g=,tag:3Uu4n1BTDYGvO6S66WmeKQ==,type:str]
-#ENC[AES256_GCM,data:SruIw83SDJxygUMEp1Ob1pXMcXrN/BVt2Zs3pbbMfA2xSG6KQ754MGlmMEewfSeDvx0A3KVyhsS7nzvgJzNZ1cK9gvQzFy0=,iv:eqtDmaiEZa0Ia3zPGK7IHCIwDfG5Vj7BRnuWPeooDww=,tag:nruOoplDW6MAQv8rd/LFLg==,type:comment]
-#ENC[AES256_GCM,data:Gr/00S8FmoLkudjgRfT6GA1Vvig22rfYexfRwDrLX7WkAPbss3FA5ajBLAo09nLMR93bKB8r,iv:VKrxSmhaX96BXMtCXRGMs4zBOasrEy2tyKAG71Mmjk0=,tag:7AS9QX7ZD7BnJYcYdCnQ3w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:Dx3xr0vYSQ==,iv:ZjPSRDVDdrgHSKwhXcKOiXN01pbR2lZOJXDfTIuYo2A=,tag:HZCJgXQuSQbHq9Butm6L5A==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:dMlXENZml4bkAw0sxhDQMWbad5Q=,iv:EkAIElL8Fv+Nol6AQ5SRZkklpnwgOZtNlLc0TdbyZjw=,tag:2dSPgHBK1gBUixD9wASKSw==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:h8qxsTD99z8BreI=,iv:8CUcOmzJpGQDZj6wk1ivypwQGIU26TCSDavaL+2gOb0=,tag:SC5JuQFp2WF/JdXfrx5ZLQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:c04rGZNhExh1DMFapALz,iv:bwVkQkM54n17KkF9CvTVVrzAAOyeskOkA+3PNFHypX0=,tag:Me09AxJ59OqfVd3vNbJPbg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:+NJsVgezW05Zly8tPMA8guZNrA+zYFxhiA==,iv:DzDyIAFL83jOWp/6Q/8j/sh1QEwlB3EaBZFONGd9//A=,tag:ceHPeyqx3npZ8k5o1UrkjA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kYtLnQdbLUBs83WeOa1c6B9ttSf+FSGgJ75MrznVCQ==,iv:+PiDnoFqKX3MAZulrDpbB6PKaPO63VhD0ncNXm7XMoY=,tag:mk1g4T+zKBBWNvjFojguAQ==,type:str]
-#ENC[AES256_GCM,data:2mLjLAEpP96oOkwJyQ6JOLvogMUCsXX+sgyKeLu0rtEjBc8zzHs=,iv:wHusgGzrvspOVXdSUoK8TjzeQu7rC1VXn1Dm0i0AEdg=,tag:K6+BFBx84v2UDQtuhFjQLQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:GE+8DE57YKHhFRjvWbSiDkl2Rwg=,iv:f2wD09t+SoCxYor8dALjRuDbys1DKnRMTCMAAN4lDjY=,tag:m6zA9+zPS1tCGKcSSLj4AQ==,type:str]
-#ENC[AES256_GCM,data:fNnhgaJ9TQnk0oXD9/k=,iv:8C+2zm2J7vGN5Qrk+mNcYNRn177rJBKM9VJiL3CKQbI=,tag:CBEbtk8wG+YyeV9NdCikGg==,type:comment]
-PODNET: ENC[AES256_GCM,data:qYQt7IK9Y1hcseLG8A==,iv:Iqs9pEVrjsPy+4vGDeQaFiYar0AVZ+hzABMoytmiR4Q=,tag:x7LjG4UvLA/pjVj+Iexy8w==,type:str]
-SVCNET: ENC[AES256_GCM,data:iDQsedkZg1mKjRyung==,iv:v95E/Gl/A9nl/mD7fzSaaMeHitldLdkYxhVTqRr4V3Q=,tag:g/P6FxU/dM7tsvFxQfactg==,type:str]
+#ENC[AES256_GCM,data:5FT3qu4Ah2r7mCd9Bg1V+r1YShW2CUjfbTKZoc+5cQjjY1XdL8sgB1kzglBB4i3LzDDn0SuApr72AriZUsUypA8=,iv:1Z6+vGDQ2WzYrN5L8B/GyyyWyaKqMXpgd8L5Rw7D7QY=,tag:UCMaPXt5p6B8LGTbA2tQBg==,type:comment]
+#ENC[AES256_GCM,data:8ljStujcA2RLwaEC5A70AdDmTk1Jl5+jjHkaWEIdmf30a4AUe96rw5qFF6c=,iv:jBZcEdKR4uDekBqnTxzTIIlMMLpUo+JP4R8ly+sHJ1o=,tag:vWEJ1Tgu+2draS0yW78/bw==,type:comment]
+VIP: ENC[AES256_GCM,data:J0qlFwoUhxEFsXwPsw==,iv:QWJiQoPC9j2177bbscZU+HEFZeFEfNikCe3oBk3L7SQ=,tag:eWbdF7DdlebAMLN+mws+sA==,type:str]
+#ENC[AES256_GCM,data:HM/YqqFoVDA2v0xoKCbj+s44p16jDRctLLHX,iv:w01ScGnwbe51sY+bRHxdShkHoDQwpOLvEBgiWdGytxs=,tag:Bp6ASaPcjY5mY1FX1eYy1A==,type:comment]
+#ENC[AES256_GCM,data:MzRVRTKaumklok/IuOPOm64fPBlCIJACtTuktdFZnJZd96OQ9DvFhydaD527stvPeD2cwaEqQHTxTwYf73z1M9t59YRfWu/xQb91LlZSUjEEzCrZYCkzTV8=,iv:zNfM47Oc8mmZK/bi2qozjK69SOzf8IVNun08y6hZDjY=,tag:ia+8PfQhoVZvO4ye/D0+dA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:wQbk9cKebo/mDtyfxeU=,iv:o10m2C/WiGjZqYevqqo+LDLT2U2hsaCh8D9d31ImLKA=,tag:N1DPCYEkV5fRYsl0hjQPkA==,type:str]
+#ENC[AES256_GCM,data:x66Nj8bOyRxU51EZNJ0I23vZcrkN5O43LzZcZwiA0gJaXg==,iv:/upYldRl06umoveiIT7i1K0uSdhjdGIqQacGc/+AfXI=,tag:bbz6y19Y01DBMmfHYBpfMQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:VlRO8ecX/J9nR7EPnw==,iv:g2CFoSX0bPNufb8NtuO656QnqvocvcD3Fp/JKRgS/Iw=,tag:pR7uJ2mEsYx33XerZEremw==,type:str]
+#ENC[AES256_GCM,data:tSexs3Ql+7IZDNZBWgvy6BKDif6ay0FJqLWVjHCwyqbnVv2w7ZVc06usRt7oHME=,iv:H8rbQKm9/jgf6oxvCGW5uBDNr2GJR2p02FIDMPUVxIc=,tag:3cZjatpyGMNDcvwS8QrjeA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:6TDhMBbsP97AjDnTIijA37N1Vb4F6+ETpgSrL9AJVQ==,iv:946U8M/Xj6V5l7DmYdbJPA+wOAQ3uUPEelObxfM6Xwk=,tag:O/VVAjEAD9dtcPvO7YFkOQ==,type:str]
+#ENC[AES256_GCM,data:suWBCprOCcz5ts9VRMHWcVxp1heiOyPrsTJwdryosa/eDXAXAeBK+IjlhfEYmQaELAxt8u432nvYUQu+7rYjO82n5uC4TnMrf5jW7T+EosDGBQ==,iv:7Uf4Iqu9sJYdSuBcdEy474WDnoRgYCzD9XtrQF9lxQY=,tag:MvYtr6ujV01Vj3j38kX8yw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:tzOxRNnJnkVNhhP/5J+P,iv:e+hD8g2Vx8tUmYMY7ZQW5Ydqq8nnGXypY+zUlr2Aolw=,tag:HMdzcRPZ9nubZDEJ4hoszQ==,type:str]
+#ENC[AES256_GCM,data:GM6zEzVdz2WbNnObeKOnhvyVyO8y82kq5D80mVEYsQ2r,iv:eTrnGS7eiaenmKXqyqReYmvPQcgtTeFhQYkdDeZBRGY=,tag:L9Sk2D4CqQqNOP2jfXbmXA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:elZmNkHFJV6Kpkg+6Ubg,iv:i0A/CTMmWrAdc/nUAM1QJ5ZghpUJgV4J/CDyqJfgw9U=,tag:fR1mEXXk+sWBsUH+QeRtVg==,type:str]
+#ENC[AES256_GCM,data:gwNR1ljJdEa7QkzN/DdnOLmZBCQ33WZ0EVRiIfeLyNxymMvikwm2D8Z0fSGkUOpbpch9Cry792GllYnOKO5cr3qvih8652RqcXrzQuZVPOc=,iv:slhRSdBcpZnn1NB39L2V3txIqMJ4iGnz6bEXyVvKsZA=,tag:GkRilcN109POK1YnXYafyw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:yw1NMXvdJo4QUibb2jfL,iv:km8msvl1oXDQaajy0Jzkm8bxXOv0Gl3iEmTFHmo7EJ0=,tag:64+xvawZmYHuX4YqQHvmmg==,type:str]
+#ENC[AES256_GCM,data:A+IU3Da0nrw4RvEgqwuF+1Ni5PesyN9S1KN3+dmPoFWfQCJs7GCuI2lp9UBI8uyTU7NjBWLmKq5Yc+ELV/1O3ybI/2unbva3itx/l6eijq7v1HE8Z7Lq,iv:347n6IhpKZTMvYcYdwZZmQ3sJqLGoLiwJ+GqCWM/ois=,tag:TE0YPdD2TbP89Ztjqd3nZg==,type:comment]
+#ENC[AES256_GCM,data:E0cDWGGc4q4iP3VHhsHz92KJU6uIV+pVYHpRhSPaAQ728Veo0rnhNHXpYYEk+dGdy9AKk7LBxSzVN3lNmbWJg/8D6btILXR25xIUqA3Or6kUrkPpC6IsgxHDCWu6F9CL9weLQP8r9WcG385EqBiOhIG02rsFl5M7R9Id/w==,iv:uol4jWPGXWD+pdwXW2DEDVbFiAgCo8p+rXQscWdxWL4=,tag:EIe1aH0DOwS+L3EumhVgLg==,type:comment]
+#ENC[AES256_GCM,data:JrydsV52EkREnjs9reXAW5eqTbe8TtJBj9r3G9EhHCgE3IQ2B/vn8dGyRjOJFxGefhVIhCnoevUW6bIqtCA0Q5/nqrszSk1gRXqqzf6FPmw=,iv:B1iCGcgNrcbOlj+UMerUmadeFOQk8BkSUSPbdohd6eY=,tag:wfhhT/nx4FQaP82+gMGhaA==,type:comment]
+#ENC[AES256_GCM,data:twnOE5DZ1903zro1dRuuxzdScfRDGYNb0OWctdTi3T2oEJa4yZS/diGa8aIx0s7Rgq8W8CSd,iv:5bP4eM89/7uERazHwj4nLeD9Y7QSad27PhJFQkwULoo=,tag:1shPwrcwVKpEW/lqxQhlsA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:bDsso6pWhgIBbyaq,iv:ZZvVGMgN2UPGjdCfLVvZN3sWl7Z7WrNIURQjOMtcPvU=,tag:4ok+TmZ3J+8ghQUWbSY77A==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:FjxiHRWUGQ1fXPS8GsP3UGo=,iv:etW3C7uUpXepnRZGE26ylMOG1VFTZxyxAeKWQKXTOJA=,tag:6xni8k+UbNN3V4Qqwwb0zA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:xdOcZcepRnQ/08Qcvfs66qnIDRYXmcWxMuNdIsQBR10=,iv:B1kcSfZQClCQm/z5mEd3AfNqX3af45EF9cw0CFLlnwE=,tag:P+WdI+51q2R1fvw6duGS3w==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:phZ6vV6VxLEJlAuQWTTVtZ+zihwDQ2PHkYHvi+1/2h118oURCokibQ==,iv:uJTwEEQ5314cZI6MrqLfnsigrXkIjtJ1v6oDUzmZVhg=,tag:l8X1AmlPvaR4Ja+3ZWhWdQ==,type:str]
+#ENC[AES256_GCM,data:t3MPaAr55k65MsWV8XGiG+A77AIUzKaERC3Clgi/3pIR6ZqqS++/pDxfa/zyuqJLp6jHAUubuJC5pNBy99MfPA==,iv:08NjlRjyGuAdaTT4zg+JWw0K7Yfgcz1bOjn84YfNcOE=,tag:WROS0F70s2FlzIfg7Off7w==,type:comment]
+#ENC[AES256_GCM,data:lGjB2j7YoruetIn9rbwXYKx7aUjGq50HnrqKKUlJtsIYd9sefxTfRnovTPHnyGYvdZqWNX7oZig=,iv:sSZ1ZyA1faOho2MKcp+xMw6gAn5sNvdBfeejvMsIZ6U=,tag:DFTorjE5x8+hO9mcnMVmzA==,type:comment]
+#ENC[AES256_GCM,data:q5bVY2Uvcun2AYTI7Jlb8ZdR+5FnMOB3Iw==,iv:OsUOh+oRg0X5h2MqSDYP3lG4oEfAWyAWbQOJHhL5aOc=,tag:IEpDtWNLpf6Jeia4rwsJwg==,type:comment]
+#ENC[AES256_GCM,data:PxilWPK1QWvyfvvNc27rZ/k9H6Cx2j5xefCi8o0ieH/ONqycN6XPvBmbE8/RLNw40/y9txdLMR5MdHJWAF6dYIjwqgP90/N2a4ZXX5o=,iv:TU05/NYl+fcsf9lQ+hf6duB6E8i6MK9S8YjN7czWXWo=,tag:zacFoCBUtI12wJUdcxOoFw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:7Deu13y+lLnhdbN+/mzkxlsoMJm/zENb4AodSXtpKgGwouOnxrRGhhWMu3LwrCxB,iv:PbNHF4ON7hRMX39xuuTCX5oRXF9Cwqf0smpSk3r4W7g=,tag:/I0XyDp+3lJ2Hpl0Uv0PSA==,type:str]
+#ENC[AES256_GCM,data:pC+dIo1tofWNlSePJZPccXCYxU8yE1zDnnc3JF4KjtaIwSx/UkVcGvVd5oCbhrJDNqJ/766Mw4OiJvyTfOW1Hlfps4F1txE=,iv:H4Lpq6PFryRi1zoJAclhpJXor725Q6EM//fzMrf/CjY=,tag:nJhJ1R8hGFLofGuw2hRh4Q==,type:comment]
+#ENC[AES256_GCM,data:BskFTdPeaAv1JMlmV0q398FMOvOZO/8H9ox8AQNf1lQZ0S/QtzdTb9n+tXj1u9VwRgvfp01N,iv:ScNAPNXW4pcgT+s0OrBQUAmFZyZdA/wj1fAfZ8OoWeo=,tag:2oeDFxZcVRUENxVkcfSLUg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:MglctQl4dw==,iv:iCkxNJ76B+Q+IM7M0juty4higOcfVlc5JBg3+1jGxJc=,tag:dXb0K8NJhuvPMJ6LHoYNGw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:0Bfcib/JZAPqytDAhY/XScMCTrw=,iv:FqUfouk7gxcaYCCsdhex9LydANQmiUq+d4WkyFRM7Os=,tag:YvFdztG9SVINsKdPTTE0/Q==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:a64JzDU84VAmpFQ=,iv:qJAVwuBXXyl2spoWuoB6QG1csd2/QmHgvwyyks1Yb7w=,tag:osmPkjAICaYJv3zUduK6xQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:hSBOhwf/gCTInp8tXD4Z,iv:JhYMKwEcy9Uftd/P2CHUxrdLn4SdTvWW/QWQDWGGRKU=,tag:Z/RHqysVqdJ6nX3BQ5SFiQ==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:UbZFOmokB38Zbwf7HooXRfp5qpLybs6Dhw==,iv:gwk6i+a6M5FX3P9hSHM7K50wY/rzn3I5cHwlJdujYwE=,tag:iDUH8HjomT3Az5bukCPDSw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:SRiSP+QGE4qW/+f5OO6ZtpAm+hjJFBMhFIbZeBouWw==,iv:fSt0iGdBudXAPowr89JDXk+PY8VOBFxsvRu+qg/3FNA=,tag:jULs14E0N8b3vPGUK0bh+Q==,type:str]
+#ENC[AES256_GCM,data:SGRtbPzW8evaap1NTRFUN5bgQdjGDO7cd4BYwKtx2OKNZVV684Y=,iv:D6aX1THs7ZxK47ccd7bEmEv8b2Vo9d+fWKObwA25g5U=,tag:7Dq4BFyBRdzsOwViqFk6mw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jtbDaul7M9i6tc0pWjTtgKbyEm8=,iv:WNPHcv1DTS9td2AYOkLxzbd43v+i1h44Yqy9o3oJPZo=,tag:rT0bkz0V80ojDJUl7BCSVw==,type:str]
+#ENC[AES256_GCM,data:1V5n2n1d++vWnKKFPVw=,iv:NpLabw7NjqyPv4M4IGOu/RuQdz8tP6Uh+Om6tnBD5tY=,tag:FKyFuZaepGLYSm2eJ5JNNg==,type:comment]
+PODNET: ENC[AES256_GCM,data:wdlETEKuLPpbfXc71A==,iv:IsIVxnZN5CL/Gwy3ycBskRVj3ThvG5G8lVGs/C9CIZ0=,tag:9GTYQlng14E9nyOIKKda2A==,type:str]
+SVCNET: ENC[AES256_GCM,data:uX8pGOwDUFYf2HliOw==,iv:DBDu+ElqxspxoO4KcSOevu3J5mAYkvwNNWqoLVebY2k=,tag:pBtAECwjQ1Ydi4v40yzDLw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBibmZiWUV3emRhSUY0SU1O
-            ZnZ1WjlIMG1TTnNGcnRDTWtPWUpvVit0SjNJCjF0YnZRQzJnenhiWTF4d2NZSDg0
-            Wk13aWFjUEJkMHFFMURmSFdzQmpGMjQKLS0tIGFwMnM2VzFTWWQwU2FiNWZDTFdn
-            TmtiS0plSUZqQTA5TDJHZlMvaWNlZFUKhr77Vh0XHD8BJIOd+PGdzb5Nbt8A1FQ1
-            SCgjuboP6lVWdXgtK90t5XX7OK5W1WGcEeCxf9danj3CT8gmWcnC1A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFRnNZdkg0TjM1UGgzZzJt
+            WFlTZWo1UGVVVXk5cjIyVjV6cnhUSGxLMkRJCldHQVdua0NCUnpoS1g5ajBveVFZ
+            TlY3V29DYm5yck9KZzVWR0UySXYxenMKLS0tIGRQOHh2QXNIdnAzSDB6eFNMSXhw
+            a2ZnNnZKMDNLWWJyNEgxK0JKbnl4UVkK5Ny3Z3bU47yXag7nPRLB2Pbo6AIqoNDO
+            1CFagh1dQJndAznepaIjOsjRhwVHcxSdNgz/iX+mYi84T0zShlNs9w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:45:31Z"
-    mac: ENC[AES256_GCM,data:vTG4fGdqcNWCUFFDSNq7xPORKiCB9fkkiTtYwI1E7yTc4X7eWgpIKQUpqVi5YZ2Y6Y+c+iS4ECXGEPY5Ha/HtTDTTPRxM0CmxpJXWGppXX07NPEVVFcX2ylhltCajWEgV5kSFbj88yYUgg6lm6yYcdkCkLswzpvZDXra4aY3p3o=,iv:sBJUYiHdcxPH7paI7l+Jz5pAmvIHiPUEWMc9qcjY95A=,tag:9ZNQLDJeir+BOIfvSQ/Ndg==,type:str]
+    lastmodified: "2025-01-19T01:50:46Z"
+    mac: ENC[AES256_GCM,data:egRQ6Fr7HZY/vs99birRA1VBUmJK1OUX1PynSk3NtFRZilBeQ6O+9+v84C32hJw7vciQaI1DV9mk2DcuW9Z3vm1yuZhNTYwQfWjYPiQJALqyta/1kFwrBx1RJxFFGweEt4r94D2+LNgUDzuloQXnhdqYUICWW2pJZQP2lqaTIrM=,iv:z4YG2CfQZqVr5OCj8yhYx/CxRhmKhCANBLiHsP91AjY=,tag:2SFubeNpDMCJ85D+uT7tVQ==,type:str]
     pgp: []
     version: 3.9.2
