--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:UyiS+5BtIm7mOHNj/uJ70qMgubG3oufQWgttK+xzRyEpLaiC9ZZKOKfQsKNAjkA36X2RL1QYpa9rl5mOMwcqZtI=,iv:6rky3mDOjlE73ZBP50J7kZgsQs6XqZNMTEA6BsR4/S8=,tag:cHyF51zVC7akITwYyBFk9A==,type:comment]
-    #ENC[AES256_GCM,data:tEHakQTfaYtVfol20Fvd2GzYStfgw+0ahg0eAgFxvBPY4a6Hpjy12L9wOXc=,iv:3bMLo2Tfa+jQx7mZ7kaAhMIM8/O2Xi7HXGurkxWT9eM=,tag:Le43p83MwkwvVyrSqDkMig==,type:comment]
-    VIP: ENC[AES256_GCM,data:SQmqtE3FpGoEmR3dkA==,iv:vJMXCggNeIM+EKw3W+V6BV5r6KHkCpIYPqRZn00pD4w=,tag:y4Ksksz17oTouIimwWEK9A==,type:str]
-    #ENC[AES256_GCM,data:u6LUTba0yX2c3ViuAgxO/Rm+HyaFfZ6nDXW9,iv:tqb0rqZ01FrWmsnfAErnOJNwCK/BNlWOZMj+86siNbU=,tag:7AmddC4Eh5b+bozTMMSTUg==,type:comment]
-    #ENC[AES256_GCM,data:gyJFVbrCMPhTd7X10GyU0strGNFSUKDod0PbMG0pyuGF4BfUCdcSHvKOzv1do4MmVBcPkLvq365y09AH8bvDyyhwu5pBrSPck6xJ68XFVus3QjTj33w6Z6Q=,iv:w+8v14M9eT/HLnOuZjdopMu58038sx6/xI5l0l6gLlE=,tag:ku14NqSGrfqo592WBX3jaQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:7s+Lg2SVB3KZdn2YFyk=,iv:pq9YwHzoonSy3md0T6qmYMk9eyeYWm7eh3jmmT1PZvY=,tag:JLBRDsuBRDiOvCGwS98Hkg==,type:str]
-    #ENC[AES256_GCM,data:lyAzqc2fwbj+J47dsoqp79N+iEpRCzUWisN5pJEO2FCd3A==,iv:tR4n52/PiUIUPwkWqOTTVsX13Qo3dfAQVpCzNGh+lkw=,tag:OISCyYlojneRvTmNFmcflA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:X5duTpIR34OUCFxmAQ==,iv:6YrDWp6K1vMDM0TPX9d4VxymJBg7a32mEU23o+78OrI=,tag:O3Nr94nXpAGHgY6rmUgO4g==,type:str]
-    #ENC[AES256_GCM,data:FzN7ej0FAlFtVX4SxxF2iaV8tPAAS4NpqLbqWuJ6YhV9CZxqVamF0V/+pDwgcZM=,iv:+CZzEKxWFHqTxJuLblpj03ZDX5wgw8SHpXMwmyWWN/s=,tag:UfKQ3ZJU/Sfmulx89EwgMw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:JyzT9F5R7m+02Y9xrqbFHjjUWL5VooRIjXLVMaGAhQ==,iv:vIOY5undliGd8YoEpNpek1bbDX/FzQO8Sy82RkyGvK4=,tag:LqKXBR2O5ek7q0yq+XNjZA==,type:str]
-    #ENC[AES256_GCM,data:3BJZpuPoMswsrv9spAyo8CdQO2IQO786EVuTWoPchX3maB+TOcwH4u6ZrZ/iHteutQOuY5iUtMV+2GWJafUbsDRUdD/aR1IfNMF3YDElMDVS/A==,iv:gihYwA4GzzRKIc7ofhyYfgil5Q/H8p7nSiI4BcCP13U=,tag:GTnJSv5Q8nnO0VehfE+7wg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:aSxMd4cTE5PbiEH3/2bj,iv:nRDV1LZnAi9HPRz4q4kvkrH3oCk1BNJIIrmq25aUfow=,tag:YxeBSQ0+o1oQ1na0mw43iw==,type:str]
-    #ENC[AES256_GCM,data:6RRoOBekLAKyNzDogt0FxDhCosqFrf7xMBhbgN1tkFbs,iv:LvMmpqZcseIMn3AkDtQCGT4UQv+GySPQrLp93O6jykA=,tag:H+zvuV8GGMaRKI8CDpnXBA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:2YmgoYJjBqG1Uf3xb66U,iv:Krtgfl+aIg5lZun+HkaWX56+AF+h0Jn7qF02BmBS6dI=,tag:p7zXQ2dkMDVxu5uv8laUFw==,type:str]
-    #ENC[AES256_GCM,data:sARtLTgORrx89ZxKyjPFR/OFjNNfGUuV960l0EQL0ZBZC9BkOQOgiNzywQViYhaWq2RGlifuISGX10IVjO1hDbaA5aC0GDFH7x/ak+4ofO4=,iv:6prwwEZW0dq/oz5Y6aAriji9/ZgL/IyhmOHfW4XVnsE=,tag:MhNr+/HEp3BVIMufurjD4Q==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:qBU0iUFw3x7iZdNunCoS,iv:XkOKkfntkvlOjP7nzNcC7RrWVC7+n4aAEi7vti7c9TM=,tag:tv2NX8yqNJf8R/MGcFgoaw==,type:str]
-    #ENC[AES256_GCM,data:b50ordvJAdvnxWAYLXNRPN+8V/VcelgpvcwWY8aF+iei8hdftf9m7xzdzaDdw7bV8Rv56Z3O5a6rFWfJfVm+x1+JlSJwq5mlGDe+jjUsM4Y9mXGC+3vQ,iv:+kYwmvvlVKrf2rj6ohbfl71foJoMfoRQLDgM6j1fAa8=,tag:G06Ikci0mXywkkuDCnoCiw==,type:comment]
-    #ENC[AES256_GCM,data:qEXl0z4hHmfbzUePVrNrirYGhLhAW74oxFxQNefJSpCfMyLFkYwrh/UcMWyeJdclewllDHb0EJb1dvpeRZ7oZ5EfoUEhsCd0U1HFw6RQXmlztM/ASlKkVcLuVSE7Qo76YmxGDtDIkEp6kEq+9SBh0Wj/aJLIL7x2ViWVGA==,iv:s6OWVz9tWLWd1c6uHPSeteRO7F4C1mIbdyHWREHDfWY=,tag:55eYgqn5vYaiYY0L4GrgAg==,type:comment]
-    #ENC[AES256_GCM,data:71rNP3UlE/Dd6w0wxGb5MkWRxlKLSRqYkdall0kUha2Eh8gkyiB164N4xOB6d+0ofEMFbMm/ri8/7OyW48FLoCt+mC+Wm6zmgju/wJLbrXw=,iv:HIeIorgeCSr6lxu0x+w9wgFXkvdvwi3JUn5zDLy3Eyg=,tag:NkQ8lseBchj0EDFDyC3bHg==,type:comment]
-    #ENC[AES256_GCM,data:yeMhJDk6mRDOYpK+Vg+roi+9VrVxRz3tRdaAN22Dmp2f6RaF5TpG/72O5n1UYwt4O+dgzAmj,iv:KuQJAg5fEagqm5i00Lr/xPvGG+dUxXN7LNsq7DtAthk=,tag:fSTbGrM+m8X0A0+lCcchHQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:d//vsA/2fiP7KqDe,iv:1NK6/upHbLLwAwGa87vEPV55UC1nK/zysEBzddNX4/0=,tag:uIv/q9XYwvyGg+KJz2gF0w==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/UZ0MG+NdvsHNxwsodv9XxU=,iv:O2Y9bPDU1EGgywqe5gkPFeTlhTz802Akvxf3+RUDJ7c=,tag:DvV2wAnEtazFJH41tCOJug==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:KZybfZXl7UBRwwxk3XH/GGrFKN8cV72OEvkXRPjBccA=,iv:NGqT4B5zm0fkWjhFypkpgW3dJE9KCHuVWZThp80wbgo=,tag:jmVku6viztD6HWStdJb4vw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Eo2xoIK2jMruVtphq92Mum0HrCl3s/Ti9l2973rTAi1h/E2GsGTnzA==,iv:m2jaDupeME6lN5ABurkjOsYakjx1wv/niL13nitUxNw=,tag:NbzflDWyP1Z7cPCH6GsuKw==,type:str]
-    #ENC[AES256_GCM,data:Eb0yZi44q5js2AYPC0y8VAjDK+GcxfQFurG+RsWFYxlXHwa/EJ+ZGNUEQgbiBlfvRlmayfRtVvIGADGk5C1xzA==,iv:ijASprHQoAe7vocdwAKHymPyFoq2czLOF5F3xq8ByHI=,tag:yGQlaHYcX+l7Jc5U8pLKVw==,type:comment]
-    #ENC[AES256_GCM,data:mU9XIF9a2bo33Wv1rH/ntL4UaG88HLIFB7l3ccwAOSsTRW1wiv5vqzDr0b30ApUkl33EdqmqXQY=,iv:NCaizq7RNTdu54KVS2jV1yb+KEEPj+U/kN/m4sXJgGY=,tag:AFNpDPzvNogjZymhr6hpqQ==,type:comment]
-    #ENC[AES256_GCM,data:C4KDh+MKFXFskZ9ibcci1oW7zl0hCagksA==,iv:hJVFvP8mFIhdKVpNKmbKhenOiw3TUGDgDsU2JeHG63I=,tag:51NKCNKoQLf0OjfcBfd0AQ==,type:comment]
-    #ENC[AES256_GCM,data:ipxdS4i0kcBBN2YUcehZcV2iCgySmoRizu7kEuW9/okNiIgzFRQ1u+03cVtUuJKqatSFqYkOF2yZm6n4HUxrwWtYUjcYlOw7zHneMmE=,iv:Qx9suLl6gBTSPFpcV3ZmsBsbRooVTF3Ue4GgM8wp1jY=,tag:X9+LQrItpoxDBnmNkhU4yg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:oeg1m+tv8XMv9okqP+E8tNXtqNo6ISZCbO8i0uKiLEJkHq/ThJa+VLBYdbcFuI2T,iv:y9PNpyo7Hxlw25FLz9UiOZoxPtMPFkz9SvDOwvnWXvA=,tag:8034K48hzciPZ7XqvH1LiQ==,type:str]
-    #ENC[AES256_GCM,data:T1yuzu9g7J4mKA5saJoORocEwPH4MAN48UeGuhfEgxXfrCYVyGpD3LAzj87gjn7+n5YtbKsXtYlztsh9v5JMqg1bFHAy9I8=,iv:obrDV60wWLltSkya2WsooEB0kHBTrNMze2DilxO0MT4=,tag:09GjUuQuazr75Bo3VGpdpw==,type:comment]
-    #ENC[AES256_GCM,data:29uYOLQtHBIXxGi4K+vWcaQcQEIj/ajOY4wRcvVLvcEByE/h9PfFnDWIRmGQYCpr6E+P3bhk,iv:YoRfs25/d4yXzQyn33jIbRTvyrw8jzS9MNHDOIxmDJ0=,tag:xmmhdq2bhC5IMdtTtoypYA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:5yg185UMrg==,iv:J8cn7aoQe19NVaL48LD5E8m2I18Tsq43btBktl/MUks=,tag:3PhFmt0S4+ZyQeUiP5OC6A==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:nJEaVvWUxyHNdwkPdcZumY/he7k=,iv:UHRclQ0B8ROvzHOu6SeAdkoYm2s7bPM79Idsr9tZDj4=,tag:tBXHj4HVE0rKTVXKJdVixA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:MkNz3JH4VZG/1e0=,iv:ZDPn4wJVsb3YfquRAqO4DCNPQ6VH8Qu1HMLnMhdcqFQ=,tag:G1jpwoC9iwZhXm/ErB8ksA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:58RMMItU0yK02jws9GWr,iv:5CoztYCkT3fiksH0e/6r2UKAt+SQ3vqblkYrnTkeQfk=,tag:f4kL6HDZu4Il44Jx5iaW+g==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:3xRQiE9Tc9fAESZ3e3T/rCQvl6rthUnSmg==,iv:8L+x8sn8ryj2yaVMvCzLmsjQZOEsk4QvKVHHLZppjpY=,tag:03O+kHVAB+yS9yfIeMxbtw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:vXWYHyJH137gfoL4KiHPkhTepmLY0ZZekMn7YDtBww==,iv:PonEI7j2/KKPVJ7bnzPiAFjUKoURumCN1zStEhzGYPc=,tag:e7SjyH1SKONgaIwIwnfR2Q==,type:str]
-    #ENC[AES256_GCM,data:OZKp9hi9FayyKBkScxpHMNby/0BBbQHxvaqPQlc1M84n+7yq9rc=,iv:1GTe88ycotY4TYOIRhfLKHX0QH9MG0Q6Wz3cMPoMKiA=,tag:iY6iPWgT4ljeVxYO4OP+wg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:23Wq8zoZwdFAYgkA/H4xpQDaCTk=,iv:u0kB/8sAEM1+248opeFIX16lviaK8/8xo/tEHXOLwfQ=,tag:9yBtaSStxC0yJpSET4DXtA==,type:str]
-    #ENC[AES256_GCM,data:IMKoI+Ii2KG8f7rdaRU=,iv:vJgVOngWP6TWjD4o1En4YQ4KA+9wHRyez/oXjGbAqdg=,tag:GebtjxL7P9VHBPWSVH7pJQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:XOhOygpWK18QA0oiPw==,iv:QfJS5vjIgQKOb5emwjsHH6AY5PVG9JQSpk3eMopTZ5E=,tag:AtwzWWw9/k2IM7CDaeBZuw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:SQZlVrB84xYVuj5upA==,iv:lZpScptm3L2884bkkIhxNkIemSPyUjS2r89l4qZ5zeE=,tag:crHS8avLI+mRZdIQkn0IRg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:ut0i0Q==,iv:wTJOq3eYbD5Cbbx1wBcoTjyqFytfXjJzhT6NxGxM6Jg=,tag:K6DgP2ydUP5hm86OybSN8A==,type:str]
+    #ENC[AES256_GCM,data:xvVab1NjSseteIdP2Y4Bv+AOO7ou/6LegES2/hmI00y+8bImQ6Usbb9CCsQz9VbvLxCvpli3sqttk8pHv373ugk=,iv:pPusYx85GK7gLL9CC/ETEQH7gdGENp37Odmz96XixCg=,tag:fBajM+QjEQ1SB7jGvTPCzg==,type:comment]
+    #ENC[AES256_GCM,data:SesmezRrIEOrc2b3n+bopHoWwtiKnBj31r1C2tI/9m9c2U0JQ13Mwj1yQ40=,iv:OnRZZ5xH2V4oEC+i+PHpC1nGUUuUndcZClGFT4VVF90=,tag:Ln4beJ8U7kXRhkgr0i2qSw==,type:comment]
+    VIP: ENC[AES256_GCM,data:9MISdZi/WzJ4W6Sn6g==,iv:gqDDPqNoZJg5+H6gOzOA8QHkPTqRDt9J8oDPem8JbwQ=,tag:+8d5U1qKGyyeKN/mufT+3w==,type:str]
+    #ENC[AES256_GCM,data:BkrQGbJ0ESYcQ9/NeRSkDWvNLgLcCw+eZpiI,iv:ouRZ9VJMHr3uNnzz9q3l9aum+nEH3imU2x+E+qW2SnA=,tag:3AiSDW/6GUrNHfvH1rufGw==,type:comment]
+    #ENC[AES256_GCM,data:X47V+rM+mgFyk4j6OhI4tgzHaAz24ipJ+bnKTYZT2sZ8rmh8+feja/Grqgz07ObJYhSYPejYwTV+r8CENZDGAWDVimrGuuI9eLqKjixNfkYwcN06zHtCIbs=,iv:ZEhKGfgwyrjegtPdj4KCYwYsMb0iIKvNmzTBjcje73k=,tag:46j3+ecQCrTP3UMFauKUVg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:cTLOJvfxO0fyAii8PRI=,iv:0qoY7ZZ5zIi67pGWPCoGt33nFqp7pA3yXXAWMFs9zE8=,tag:tj/xxsZ5+rdEqeGskxU7JQ==,type:str]
+    #ENC[AES256_GCM,data:z1KCmpU7IEZZZcfnZs/B1d66WqzbSIki1/iJNIe5VZcc6g==,iv:PVJNJzEOiBAgbH3zQswbGXeVJHvqrxPx9gGZ3exZvGs=,tag:eL+IdI+x+RRIIx+fYb5PRQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:6IHPb3fTqRiUm+n/8g==,iv:yM/XQ2E2l01VLc6GXscuqz9EaipjZXveBL/1sm+K0K8=,tag:nOGvxlV/IQEEvuLjk6NemA==,type:str]
+    #ENC[AES256_GCM,data:7wIxWhroqcT03psV3BwfVVzrIzxg2jtF13cYMtGJZwwh2xDcNM9WLSnuvCzXHLw=,iv:RY79MidKj3dVSO8S0Ma96OlmkMxBPBfSvOoFH+J6bqo=,tag:Ws8cYn9Mj+IWENDDPTab9w==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:WD8wAbRwzMI+4kgNc9u+Eiy59zvZ5AG9Gk8q7QvOWg==,iv:lz5DnuprMkDU/2XEa5G42im+XnhN9OJXRKWHOwVpXVs=,tag:/l6wjZl0Lnr00K9CCRyTHA==,type:str]
+    #ENC[AES256_GCM,data:yUPoqv1GWSjf/3sWOI0ozTJxrBvvp3/qSzTiH69fFow1Y/E3MjcycKLyhO3XlUfIEKskBda/RFHOx+y5gWv2495tXGqta7pcCLjECHyrCuwrKA==,iv:ECjEDxdx8D50RJD+9nyLKoOiWtMFmvaP2MvINh48e9c=,tag:SiAIVFX0aho/FgXtFdHaVA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:aLa5gUi9AovvS9cW63Yo,iv:SWIhXjg4g3Hw1bWFwZUHSiTrq5rYiigPAOo9hVUhtXM=,tag:60pF2hgICFbWgr685GX6gQ==,type:str]
+    #ENC[AES256_GCM,data:z6wq3/VGL0vdaMxKuYx91TfYzkG1Eg6kMfOH8lRwWp1M,iv:XsoFKYcvfC5/GAYZN5Pl6Ubl6Us5tHQGXg6a1/XcyO0=,tag:F8SUruma2iUun94Yt3YrOg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:uj5QcBYg6ciBfQbSaID+,iv:Nltgdc4WXfCZmUjvvhDCTPqgYmrMdLHwdxFAjP8w9Gs=,tag:DsjRiJdIB0dqFuP7U/ds7Q==,type:str]
+    #ENC[AES256_GCM,data:uhhfrcI/Vqgf5gWgDwrqFGJ6Ex0WBnGXpIncpoqgC57dKZ2cJ1TVTX3jsoKS+QtLi3kBVZGPbg4Q+ppNYa+LowielC8AWRPS1ltFrX3jmA0=,iv:I9EM/uav5ayqOAGTV8nvhwu1eqXIEMN8sV65Y18VraA=,tag:maI7sRLT406epgBh1UM+MQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:OI6JJUi7sFtm0MbC8CMT,iv:XgYonWH0hD2j+OzXwhprEcGsFcpV78bLBW0I9e9mnFk=,tag:utQpS4pNDQvh//79FpTGBA==,type:str]
+    #ENC[AES256_GCM,data:fiQZDNOmICKSb9WhDf7qj3SIIZru7FqGT3ZpMQ8jrtaz9ZH1FBuQY+7JGg0TQoe3KaJ2ty14SUjp7EvAbg24/36WmAeJM+/9Sazxb1HWWZF8La6//+xn,iv:YBE6kmMIsnI8Byi5yMC0h9NfoK9aeurBXHBakv76OVM=,tag:D1pnlrDqMHHANV1zjv7EqQ==,type:comment]
+    #ENC[AES256_GCM,data:Y1hMRUVDOFWd3reii1vc4l1poWDraIbcEwLup6hQz1+hgXf1sk0qxT6jk8X3KbJhNaeXctdosT/soo37iVH2huksCUlJfjfYKVDoLHAyJoIqUUIZKcZoyAiFxPMPYcpJwEBjKpqUDyc1n+kwFyA8NKw2zpLxQZBOu60IIQ==,iv:5EoIc7cgt+qTW3Ttc0QyL1PURJUQqlFmTUjeOwfFKZE=,tag:FIPpFBVAgKM0EOZB59NMag==,type:comment]
+    #ENC[AES256_GCM,data:314oeUGjUm0xEA5DiSCWuPmjnznGdMivGAZM4rJ5UsRXl27rk5Iz6UyVjnEER65Ap1b+73nSbJc50ZiPKDHnDlz7ffB1utOsVmPmYevdqsI=,iv:o1MHniuVequIVpNnqWtvK08a17KXaURDEC4pb7steW0=,tag:kLRZkMhmkhZTrq3rhIkQkA==,type:comment]
+    #ENC[AES256_GCM,data:La211NixY5jacPdk7QulA3/C/yR6yOJQdhwMHUBPS6O6aS2nEzNJC9e/kEkVjIU0JNQX8p2C,iv:yOkhhVh3Qcq0it7pTqrJt6xqBwFZqemikFVIWH7bFMU=,tag:avaSbnR1fUAxG2cmJ8nL5A==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:jj2S+8If+Sbi0H/0,iv:YZqngE/3IwWBIujvTU3RD/po1aOg67xn53xdjxzZ9LM=,tag:k39l0YUfHhuBJOXfnjGmUQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:A2R08pstarIvHAnO+PNJ6dc=,iv:Qal+LomB558yjMubb4DKQrAa0ijIlJ9DxGb83KH/iSo=,tag:bPyfIJ8i9khwTsDZnBJVHA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:k9792w2vp1irOeGszeal3LOxUnGT9RxpEH8mUVy2dDY=,iv:DWv+SQ1US3e/omHxibKwl6yVd6SjT5WpAK+/5jlhQwg=,tag:NPru9cWy4kACXvyGNM1khQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Q+uSpvhsHsVeZqacLWIfb+9+REJbjZ0MXRUjCobrXBDQSD1eIPYEqw==,iv:VKqaeuNcqnmBbemDv4HhZOdHCnERWjG8OmHr2EGLRLM=,tag:9sfgqFSlLBzi/CCCJs5HTA==,type:str]
+    #ENC[AES256_GCM,data:LuaHfACqXZ+2q29NEJFN+3jTtQVHQ6w/Qy8qiwGEVAob4V/Ux+aBiI0IzlHtORezOewwx7DzCjDnYtWoZVM8Vw==,iv:u15VSIZ+/RCYXWsBDo9YCxv1PmutffzDmE2iMLkCpiQ=,tag:6aHHvPK03Po0awoV6ZjS/Q==,type:comment]
+    #ENC[AES256_GCM,data:buVurI4OdkQDw+smW4F/kulDUenOwMT7QPxB1cnBeEQn3x6u0xof1GZ86a6wgxa7lug1NhjdsMc=,iv:EYH01JATxdZXycy+qnzO8oTq2JZnWLVBmq83y/hIsUw=,tag:73+J7nsWxparR+wPiyuTPA==,type:comment]
+    #ENC[AES256_GCM,data:4LcF/4u0VWj6cidlWa4JltbJAQ+zXlzHqA==,iv:G68L8+VHeMMulu/tcsOkD8BsdRPzzZE5ulFgUna4ZcE=,tag:8LTO0I6By+3yeE0I5nYDWQ==,type:comment]
+    #ENC[AES256_GCM,data:ZSXrN0zBLNm4dzP/fOnjPGtAGTkXz8WWAKnMP+6DPCBE2EBkOg5b240A55FtPlGmQXkwlxLYIOah6MRbep0w7ntlwDJZIPrURvlM06o=,iv:ToTDCIvnl//62QLq6HwJtUb0FYmpJr8WSlkDNCZiNSU=,tag:awUNLPBKTKsTCHxDFFGAMA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:ax+lDd0mStuCiFRd/VcFs5+KH4t9mb3K4QbzhqU2CQ7tsD2SGH3A2vZog9U6fU2v,iv:Zz15MAf9v86mahg6Xd5ENxEZgwxwxQwlSoedMxElF54=,tag:ipKLfLWs8Gllem8F92D7lg==,type:str]
+    #ENC[AES256_GCM,data:E8AatFZDgZ09K/g6AF8wye2YFNxDOyz4tnVPLkTja7fWjoJJMGhSMBNeZJScqJnigKc07x1SV+WJZtp0xWXIZP+XvJNGPLU=,iv:cn+szTA1aXRoIpjuNhum3wveHQEtZn55adIYgqrngu4=,tag:8Wlq3nffv9wPbLSZUA145w==,type:comment]
+    #ENC[AES256_GCM,data:9833Ld95IiVW6uWjq1b08bxhWvDC6KTB3BsMDiiM16Pz9yBO7LHDAzU7b2Awb6xc3yTEnB8u,iv:7j6UJpZSKbfZ/7gbNa/4SDU2JnFx7MQWa13W963uMS0=,tag:AW1iWlB44kEknqy6QELiqg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:ju20wWkpMw==,iv:MWfonPud5eTxzJOhTKthSO6CyhzxoW3PhmBkYVOU8Xc=,tag:TJ3tG70HxS78vUsBYWLeSQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vphXv/8DZxKUMQesDy8B8piPjYg=,iv:vHMyQgjcWWKlSfmSTDu9pERYBQo07LeSSZS0vhNe8b4=,tag:3piZZ34H2TjU6VK6QfsjzA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:sEjV/50kBpsXNcw=,iv:1mKeG/jzAAdZelpShJjRUGZF5FPvlct0jdHU7usDQr8=,tag:O5bITt6Dn0+3lqZ1p2sVFw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:X5CCYuVs0tZFhYfEu0lM,iv:cPPz/ktRqFYR7UcA/J3LuRS82xedhozHtqVg7X17R2Q=,tag:DadVAcvCoP/bdWyJZlyyVw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:GOU9/d7EM2WxCrFkakNDggU0QcFI/dPzZQ==,iv:jle/mIauDXQFrF3ttlzXw5DUMofDgvAJCFjOxmD3rSg=,tag:2wLD0DE9zj1zs5VPvH5D0A==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2CdN12ge7HJW06bBhnIv8JhInsm8wkeyMbuoD0ZBDQ==,iv:yMMSba+Yuas8tr1Ld7Z681muNptNjHnFPf/e0mM+IkE=,tag:UOxlbkqRB/XFwuvYImUVqg==,type:str]
+    #ENC[AES256_GCM,data:vXk9SxxKxYI7fABJ/Lmml6XeQMMjIUoARfHsNIQq1e7zwnR0V4o=,iv:tCfv/CjfSlgkS2IQbDZqACpM3WcP+nkFFuRn3uVuNDE=,tag:CmspmzpaBSfefxKjHn+mxA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Ls31nGipEwYc+hResRDBkDeywyQ=,iv:k77x5v8mfuDO0RhrYOd6N1+uRlejUM6JcXHFXPUnWEk=,tag:LB12TRj8n2mkibuap7tUgg==,type:str]
+    #ENC[AES256_GCM,data:zbELTwHbWX6FZFYYRVg=,iv:ETKrbNToxli5L5iD9s8XAVQqyeySpg6B1D7dfhST3cw=,tag:ZsT06j8nHWzBn9eXcOJSmQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:UoxUGL/jeOCfZogRBg==,iv:6O+tKjTR3ekNw+ZQ3VQWb7J/EGw2pGnh0M5/Zn/b3J8=,tag:ENddrwDUwZceqTvO2QgXOg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:WrvAXf3/8PBiX2thLw==,iv:dobubUwvO+gD5IlXrH97Vr0+6jm171wtv5B8Lwk7IFo=,tag:vE/UvH+wbEaBqVceuwLmEg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:VJbSWA==,iv:qjKSJoxC9XaNac4LueIInbi0xL8++sM+izJj0NPaOhw=,tag:fB9HYWVD5qyZVkxre3zczQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuVVB2WnI4WW9aaCsrSE01
-            WEhjRFp5VlU0UkV6RWc0SExoaWQyRkc3blY0CitGcFdJVXl4bUUzd25DYWFpa3BB
-            R3dtbmtmdUhkK3c3UmQvNGsySGZWTEUKLS0tIGJUOWVSR1ZtaXMzS2xJUzY3R0Rz
-            Rm1MWmJDemRlRjZ5aUExczB5aVB3S0kKnEavaJm6pHcX6P+DRBi588QvHv98v129
-            u3/vg1p+cfMF2WaDHXp8LL3YX7vq5g+E04FkUC3Utxc47qz6GloIyw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3eXRrR1R1aC8xM3VEc0xu
+            eUtPL0JlZjFTV1pVNmk5aXlzZThVUGhxbm4wCmU1K1NKdU9HcGxNMEdBYVhING9R
+            aDk0LzFIWFRYbW52TGdPRDcyMkE1L28KLS0tIHE4UnBKc2dMWTlqL1RaaWJVemNG
+            MVd6blRFem1seFhob3pTaVJiaklLdlEKvM4VYH7byodkGZSE5wTsy0RbxFCTjHfd
+            N1+ae0CXWNqSsC5giHVjXHKVHjWzFxssmiAYYg1JWv1btPVJ/HDYFQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T01:45:30Z"
-    mac: ENC[AES256_GCM,data:IBZSMnOT7NO4ENc5iBbJQdqwfv7+qnFlXbPkAcAimTtjauqQVwIo/j5kwz2BACIy/+lXtaAgRDRQVeCp5JRnpELpX+IElscihM4QiEarNL0CiFEiiRvISwQu62P/Dmgo0/ziBCSnKPTnpr5j54EmLfs8HrD9qZT+N1FpV13xETg=,iv:KUL9LAL1tn8xOsfC6aFHwsMgJcNCrL1NJ4GlIEKBdLo=,tag:PdRfaDyFp5bH/KYj7RbJHQ==,type:str]
+    lastmodified: "2025-01-19T01:50:46Z"
+    mac: ENC[AES256_GCM,data:SFXCnqPwrqhTLz7YD+1rCuKmZ2lhIuaw3KM87YGx3AedWamdh5St6avTOLKFFpnEldvoP06UWBP2R/a0igvnMD2av9jRsWbcOkwNN3eheFkigmJue8uSmkTbTa+ZCJja5/ES9TIIMwNnMsZWeP8rYxAqvSl7mRbWNNZUAotL6j4=,iv:nQNtxYmakVXoAVSMkcXN1Z5kSPmL006vjjEyXSUJwMY=,tag:sOGd4O9Ze6GgBupj7Q0Pqw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
